--- a/package.json
+++ b/package.json
@@ -6,11 +6,42 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["eslint", "config", "typescript", "angular", "nx"],
+  "keywords": [
+    "eslint",
+    "eslintconfig",
+    "typescript",
+    "angular",
+    "nx"
+  ],
   "author": {
     "name": "Fabien Dehopré",
     "email": "fabien@dehopre.dev",
     "url": "https://mastodon.dehopre.dev/@fabien"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@angular-eslint/eslint-plugin": "^15.2.1",
+    "@angular-eslint/eslint-plugin-template": "^15.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "@typescript-eslint/typescript-estree": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^45.0.2",
+    "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "@angular-eslint/eslint-plugin": "^15.2.1",
+    "@angular-eslint/eslint-plugin-template": "^15.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^45.0.2"
+  }
 }
